--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-section_id: home
+section_id: portfolio
 works:
   - image: images/@stock/msn-work-1.jpg
     class: graphic-design
@@ -62,22 +62,113 @@ works:
     class: graphic-design
     title: Flower Book
     desc: "Design &amp; Development"
+  - image: images/@stock/msn-work-1.jpg
+    class: development print
+    title: Beautiful Girl
+    desc: "Design &amp; Development"
+  - image: images/@stock/msn-work-2.jpg
+    class: brand
+    title: Look at me
+    desc: "Design &amp; Development"
+  - image: images/@stock/msn-work-3.jpg
+    class: web-design
+    title: Am I cute
+    desc: "Design &amp; Development"
+  - image: images/@stock/msn-work-4.jpg
+    class: print
+    title: Umbrella
+    desc: "Design &amp; Development"
+  - image: images/@stock/msn-work-5.jpg
+    class: graphic-design
+    title: Canned Bros
+    desc: "Design &amp; Development"
+  - image: images/@stock/msn-work-6.jpg
+    class: development wide
+    title: Hale
+    desc: "Design &amp; Development"
+  - image: images/@stock/msn-work-7.jpg
+    class: print
+    title: A beautiful day
+    desc: "Design &amp; Development"
+
 ---
 
-<div class='mod modMasonryGallery'>
-  <ul class='gallery'>
-    {% for work in page.works %}
-      <li class='{{work.class}}'>
-        <a href='portfolio-item.html'>
-          <img alt="" src="{{work.image}}" />
-          <div class='overlay'>
-            <div class='thumb-info'>
-              <h3>{{work.title}}</h3>
-              <p>{{work.desc}}</p>
-            </div>
-          </div>
-        </a>
-      </li>
-    {% endfor %}
-  </ul>
+<div class='two spacing'></div>
+  <div class='spacing'></div>
+    <div class='mod modMasonryGallery'>
+      <div class='gallery-nav'>
+        <ul>
+          <li class='current'>
+            <a data-cat='all' href='#'>All</a>
+          </li>
+          <li>
+            <a data-cat='landscapes' href='#'>Landscapes</a>
+          </li>
+          <li>
+            <a data-cat='portraits' href='#'>Portraits</a>
+          </li>
+          <li>
+            <a data-cat='people' href='#'>People</a>
+          </li>
+          <li>
+            <a data-cat='outdoors' href='#'>Outdoors</a>
+          </li>
+          <li>
+            <a data-cat='ski' href='#'>Ski</a>
+          </li>
+        </ul>
+      </div>
+      <ul class='gallery'>
+        {% for image in site.static_files %}
+            {% if image.path contains 'images/bangers/ski' %}
+                <li class='ski'>
+                  <div class='overlay'>
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
+                  </div>
+                </li>
+            {% endif %}
+        {% endfor %}
+
+        {% for image in site.static_files %}
+            {% if image.path contains 'images/bangers/landscape' %}
+                <li class='landscapes'>
+                  <div class='overlay'>
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
+                  </div>
+                </li>
+            {% endif %}
+        {% endfor %}
+
+        {% for image in site.static_files %}
+            {% if image.path contains 'images/bangers/outdoors' %}
+                <li class='outdoors'>
+                  <div class='overlay'>
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
+                  </div>
+                </li>
+            {% endif %}
+        {% endfor %}
+
+        {% for image in site.static_files %}
+            {% if image.path contains 'images/bangers/people' %}
+                <li class='people'>
+                  <div class='overlay'>
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
+                  </div>
+                </li>
+            {% endif %}
+        {% endfor %}
+
+        {% for image in site.static_files %}
+            {% if image.path contains 'images/bangers/portraits' %}
+                <li class='portraits'>
+                  <div class='overlay'>
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
+                  </div>
+                </li>
+            {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 </div>
