--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ works:
             {% if image.path contains 'images/bangers/ski' %}
                 <li class='ski'>
                   <div class='overlay'>
-                    <img src="{{ base }}{{ image.path }}" alt="image" />
-                    <!-- <img src="{{ site.baseurl }}{{ image.path }}" alt="image" /> -->
+                    <!-- <img src="{{ base }}{{ image.path }}" alt="image" /> -->
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
                   </div>
                 </li>
             {% endif %}
@@ -137,8 +137,8 @@ works:
             {% if image.path contains 'images/bangers/landscape' %}
                 <li class='landscapes'>
                   <div class='overlay'>
-                    <img src="{{ base }}{{ image.path }}" alt="image" />
-                    <!-- <img src="{{ site.baseurl }}{{ image.path }}" alt="image" /> -->
+                    <!-- <img src="{{ base }}{{ image.path }}" alt="image" /> -->
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
                   </div>
                 </li>
             {% endif %}
@@ -148,8 +148,8 @@ works:
             {% if image.path contains 'images/bangers/outdoors' %}
                 <li class='outdoors'>
                   <div class='overlay'>
-                    <img src="{{ base }}{{ image.path }}" alt="image" />
-                    <!-- <img src="{{ site.baseurl }}{{ image.path }}" alt="image" /> -->
+                    <!-- <img src="{{ base }}{{ image.path }}" alt="image" /> -->
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
                   </div>
                 </li>
             {% endif %}
@@ -159,8 +159,8 @@ works:
             {% if image.path contains 'images/bangers/people' %}
                 <li class='people'>
                   <div class='overlay'>
-                    <img src="{{ base }}{{ image.path }}" alt="image" />
-                    <!-- <img src="{{ site.baseurl }}{{ image.path }}" alt="image" /> -->
+                    <!-- <img src="{{ base }}{{ image.path }}" alt="image" /> -->
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
                   </div>
                 </li>
             {% endif %}
@@ -170,8 +170,8 @@ works:
             {% if image.path contains 'images/bangers/portraits' %}
                 <li class='portraits'>
                   <div class='overlay'>
-                    <img src="{{ base }}{{ image.path }}" alt="image" />
-                    <!-- <img src="{{ site.baseurl }}{{ image.path }}" alt="image" /> -->
+                    <!-- <img src="{{ base }}{{ image.path }}" alt="image" /> -->
+                    <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
                   </div>
                 </li>
             {% endif %}
